src/lib/sandboxes/__fixtures__/python/syntax-error/tests/test_solution.py
from solution import two_sum


def test_basic_case():
    assert two_sum([2, 7, 11, 15], 9) == [0, 1]
